# Kruzinator

./: DOCKER.md  README.md  compose.dev.yaml  openapi.json
kruzinator-api/: Dockerfile  README.md  pyproject.toml  requirements.txt
kruzinator-api/alembic/: env.py
kruzinator-api/alembic/versions/: 0001_init.py  0002_user_auth_fields.py  0003_drop_sessions.py  0004_reward_events.py
kruzinator-api/app/: main.py
kruzinator-api/app/schemas/: __init__.py  ingest.py
kruzinator-api/src/kruzinator_api/: __init__.py  app.py  cli.py  config.py  db.py  features.py  models.py  schemas.py
kruzinator-api/src/kruzinator_api/auth/: jwt_utils.py  password_utils.py
kruzinator-api/src/kruzinator_api/routers/: __init__.py  auth.py  datapoints.py  exports.py  health.py  rewards.py  sessions.py  users.py  well_known.py
kruzinator-vue/: Dockerfile.dev  README.md  index.html  package-lock.json  package.json  vite.config.ts
kruzinator-vue/src/: App.vue  main.ts
kruzinator-vue/src/api/: http.ts  kruzinatorApi.ts  types.ts
kruzinator-vue/src/components/: CircleCanvas.types.ts  CircleCanvas.vue  StrokePreviewCanvas.vue
kruzinator-vue/src/router/: index.ts
kruzinator-vue/src/stores/: workflow.ts
kruzinator-vue/src/views/: CaptureView.vue  ConsentView.vue  ReviewView.vue  UserView.vue
