[project]
name = "kruzinator-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marek Vaško", email = "ivasko@fit.vutbr.cz" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
kruzinator-api = "kruzinator_api:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
